# dymo_labelprinter

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  module.nix  shell.nix
dymo-label/: Cargo.toml
dymo-label/src/: command_accumulator.rs  image.rs  lib.rs  main.rs  opt.rs  printable_image.rs
dymo_label/: Cargo.toml
dymo_label/src/: .gitignore  command_accumulator.rs  main.rs  picture.rs
dymo_print/: Cargo.toml
dymo_print/src/: color_map.rs  command_accumulator.rs  fonts.rs  lib.rs  main.rs  opt.rs  picture.rs
dymo_print_server/: Cargo.toml
dymo_print_server/src/: main.rs
dymo_print_server/static/: text.html
nix/: default.nix  module.nix
src/: color_map.rs  command_accumulator.rs  image.rs  lib.rs  main.rs  opt.rs  printable_image.rs
udev_rule/: 50-dymo.rules
webserver/: Cargo.toml
webserver/src/: main.rs
webserver/static/: image.html  index.html
