[package]
name = "dymo_print_server"
version = "0.1.0"
authors = [ "puzzlewolf <mail@nora.pink>" ]
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
actix-web = { version = "4", default-features = false, features = ["macros"] }
dymo_print = { path = "../dymo_print" }
env_logger = "0.11.0"
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
structopt = "0.3.22"
